--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,25 @@
+@keyframes shake{
+  0%,
+  100% {
+    transform: translate(0, 0);
+  }
+
+  10%,
+  30%,
+  50%,
+  70%,
+  90% {
+    transform: translate(5px, 0);
+  }
+
+  20%,
+  40%,
+  60%,
+  80% {
+    transform: translate(10px, 0);
+  }
+}
+
 html {
   box-sizing: border-box;
 }
@@ -88,7 +110,7 @@ body{
   position: relative;
 	width: 280px;
 	min-height: 330px;
-  margin-bottom: 15px;
+  margin: 0 -4px 30px -4px;
 }
 
 .catalog-item:hover > .item-link,
@@ -108,6 +130,7 @@ body{
 
   border-radius: 15px;
   background-color: rgba(255, 255, 255, 0.2);
+  box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.4);
 }
 
 .catalog-item .item-link{
@@ -151,7 +174,7 @@ body{
 
 .catalog-item .price{
   position: absolute;
-  bottom: 101px;
+  bottom: 77px;
   left: 6px;
 
   text-shadow: 0.5px 0.9px 3px rgba(49, 50, 53, 0.5);
@@ -374,7 +397,7 @@ a.search:focus ~ .header-search{
   width: 90px;
   height: 30px;
   padding: 0 10px;
-  margin-right: 11px;
+  margin-right: 7px;
   margin-top: -9px;
 
   border-radius: 20px;
@@ -609,6 +632,9 @@ a.basket:hover svg{
   position: relative;
   width: 120px;
   background-color: #f7f6f3;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
   color: #323232;
 }
 
@@ -907,7 +933,7 @@ a.full-basket:focus ~ .header-basket{
   width: 1148px;
   min-height: 305px;
   padding: 5px 18px;
-  margin: 22px auto;
+  margin: 3px auto 21px auto;
   border-radius: 15px;
   background: #eee3cb url('../img/wafer.png') repeat 0 0;
 
@@ -1341,6 +1367,10 @@ a.full-basket:focus ~ .header-basket{
   z-index: 5;
 }
 
+.feedback-wrapper.opened{
+  display: block;
+}
+
 .feedback-popup{
   position: fixed;
   top: 50%;
@@ -1411,6 +1441,11 @@ a.full-basket:focus ~ .header-basket{
   color: #999999;
 }
 
+.feedback-form .invalid{
+  border: 1px solid #ff0000;
+  background-color: rgba(255, 0, 0, 0.1);
+}
+
 .feedback-form input:hover,
 .feedback-form textarea:hover{
   border: 2px solid #c7c6c5;
@@ -1450,11 +1485,20 @@ a.full-basket:focus ~ .header-basket{
   align-self: flex-end;
 }
 
+.modal-error{
+  -webkit-animation: shake 0.6s;
+          animation: shake 0.6s;
+}
+
 /* catalog page */
+.inner-header .header-logo{
+  cursor: pointer;
+}
+
 .inner-page main{
   width: 1200px;
   margin: 0 auto;
-  padding: 0 25px 50px 25px;
+  padding: 0 25px 30px 25px;
   border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 }
 
@@ -1465,6 +1509,7 @@ a.full-basket:focus ~ .header-basket{
   list-style: none;
   padding: 0;
   margin: 0;
+  margin-top: -28px;
 
   font-size: 14px;
   line-height: 16px;
@@ -1481,8 +1526,8 @@ a.full-basket:focus ~ .header-basket{
 
 .breadcrumbs li{
   position: relative;
-  padding-right: 10px;
-  margin-right: 5px;
+  padding-right: 14px;
+  margin-right: 8px;
 }
 
 .breadcrumbs li::after{
@@ -1498,16 +1543,22 @@ a.full-basket:focus ~ .header-basket{
 
 .inner-page .main-title{
   padding: 0;
-  margin: 0;
+  margin: 4px 0;
   font-weight: bold;
   font-size: 35px;
   line-height: 41px;
   color: #ffffff;
 }
 
+.filter-form{
+  margin-top: 26px;
+  margin-bottom: 43px;
+}
+
 .filter-form .fieldset-wrap{
   display: flex;
   flex-wrap: wrap;
+  margin-bottom: 19px;
 }
 
 .filter-form fieldset{
@@ -1522,25 +1573,33 @@ a.full-basket:focus ~ .header-basket{
   line-height: 18px;
   color: #ffffff;
 }
+
 .filter-form .filter-box{
   height: 35px;
   background-color: rgba(255, 255, 255, 0.2);
   border-radius: 20px;
-  padding: 5px 10px;
+  padding: 5px 0 5px 8px;
 }
 
-.filter-form select{
+.filter-form .sort-direction{
   width: 195px;
 
   font-size: 16px;
   line-height: 19px;
   color: #ffffff;
+
+  cursor: pointer;
+}
+
+.filter-form .sort-direction:hover,
+.filter-form .sort-direction:focus{
+  color: #000000;
 }
 
 .filter-form p{
   margin: 0;
   padding: 0;
-  padding-left: 10px;
+  padding-left: 18px;
   margin-bottom: 5px;
 
   font-weight: 500;
@@ -1565,7 +1624,7 @@ a.full-basket:focus ~ .header-basket{
 
 .filter-form .sort-wrap{
   width: 200px;
-  margin-right: 15px;
+  margin-right: 9px;
 }
 
 .filter-form .price-wrap{
@@ -1611,9 +1670,26 @@ a.full-basket:focus ~ .header-basket{
 
   position: absolute;
   top: -8px;
-  left: 23px;
+  left: 14px;
 
   z-index: 1;
+  cursor: pointer;
+}
+
+.range-scale .range-min:hover,
+.range-scale .range-max:hover,
+.range-scale .range-min:focus,
+.range-scale .range-max:focus{
+  width: 23px;
+  height: 23px;
+  top: -9.5px;
+  left: 11.5px;
+}
+
+.range-scale .range-max:hover,
+.range-scale .range-max:focus{
+  top: -9.5px;
+  left: 109.5px;
 }
 
 .range-scale .range-min::after,
@@ -1632,19 +1708,25 @@ a.full-basket:focus ~ .header-basket{
 }
 
 .range-scale .range-max{
-  left: 121px;
+  left: 112px;
 }
 
 .filter-form .fat-wrap{
-  width: 450px;
+  width: 415px;
+  margin-left: 5px;
 }
 
-.fat-list label{
+.fat-wrap .fat-list{
+  padding-top: 3px;
+}
+
+.fat-list .fat-label{
   position: relative;
-  padding-left: 30px;
+  padding-left: 33px;
+  cursor: pointer;
 }
 
-.fat-list label::before{
+.fat-list .fat-label::before{
   content: '';
   width: 22px;
   height: 22px;
@@ -1656,6 +1738,7 @@ a.full-basket:focus ~ .header-basket{
   border-radius: 50%;
   border: 4px solid #ffffff;
   background-color: transparent;
+  opacity: 0.8;
 }
 
 input.fat-radio:checked + label::after{
@@ -1669,17 +1752,50 @@ input.fat-radio:checked + label::after{
 
   border-radius: 50%;
   background-color: #ffffff;
+  opacity: 0.8;
 }
 
-.fat-list li,
-.extenders-list li{
+input.fat-radio:checked + label:hover::after{
+  opacity: 1;
+}
+
+input.fat-radio:disabled + label::after,
+input.fat-radio:disabled + label::before{
+  opacity: 0.4;
+}
+
+.fat-label:hover::before,
+.fat-label:hover::after{
+  opacity: 1;
+}
+
+.fat-list li,{
   margin-right: 5px;
+}
+
+.extenders-list li{
+  margin-right: 22px;
+}
+
+.extenders-list li:last-child{
+  margin-right: 0;
+}
+
+.fat-list li{
+  padding-top: 2px;
+  padding-left: 3px;
+  margin-right: 15px;
+}
+
+.fat-list li:last-child{
+  margin-right: 0;
 }
 
 .filter-form .extenders-list{
   width: 700px;
   float: left;
-  margin-right: 15px;
+  margin-right: 18px;
+  padding-left: 18px;
 }
 
 .filter-form button[type="submit"]{
@@ -1695,11 +1811,27 @@ input.fat-radio:checked + label::after{
   font-size: 16px;
   line-height: 18px;
   color: #ffffff;
+  cursor: pointer;
+}
+
+.filter-form button[type="submit"]:hover,
+.filter-form button[type="submit"]:focus{
+  border: none;
+  background-color: #fbfcfb;
+  color: #323232;
+}
+
+.filter-form button[type="submit"]:active{
+  border: none;
+  background-color: #eaeaea;
+  color: #323232;
+  box-shadow: 0 2px 0 1px inset #696969;
 }
 
 .extenders-list label{
   position: relative;
-  padding-left: 30px;
+  padding-left: 31px;
+  cursor: pointer;
 }
 
 .extenders-list label::before{
@@ -1716,6 +1848,10 @@ input.fat-radio:checked + label::after{
   background-color: transparent;
 }
 
+.extenders-list label:hover::before{
+  border: 2px solid rgba(255, 255, 255, 1);
+}
+
 input.extenders-check:checked + label::before{
   display: none;
 }
@@ -1730,6 +1866,21 @@ input.extenders-check:checked + label::after{
   left: 0;
 
   background: url('../img/checkbox-on.png') no-repeat center center;
+  opacity: 0.8;
+}
+
+input.extenders-check:checked + label:hover::after{
+  opacity: 1;
+}
+
+input.extenders-check:disabled + label::before,
+input.extenders-check:disabled + label::after{
+  opacity: 0.4;
+}
+
+input.extenders-check:disabled + label:hover::before,
+input.extenders-check:disabled + label:hover::after{
+  opacity: 0.4;
 }
 
 /* catalog items */
@@ -1748,17 +1899,28 @@ input.extenders-check:checked + label::after{
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
+  margin-bottom: 27px;
+}
+
+.page-navigation{
+  padding-top: 20px;
 }
 
 .page-navigation .page-list{
   display: flex;
-  flex-wrap: wrap;
-
-  width: 190px;
+  justify-content: flex-end;
   list-style: none;
   padding: 0;
   margin: 0;
-  margin-left: auto;
+  margin-right: -2px;
+}
+
+.page-navigation li{
+  margin-right: 4px;
+}
+
+.page-navigation li:last-child{
+  margin-right: 0;
 }
 
 .page-navigation a{
@@ -1772,12 +1934,6 @@ input.extenders-check:checked + label::after{
   font-size: 16px;
   line-height: 18px;
   color: #ffffff;
-}
-
-.page-navigation .current-page{
-  color: #353535;
-  background-color: #ffffff;
-  border-radius: 50%;
 }
 
 .page-navigation .back-link,
@@ -1827,4 +1983,26 @@ input.extenders-check:checked + label::after{
   transform: rotate(45deg);
   top: 10px;
   left: 10px;
+}
+
+.page-navigation .current-page{
+  color: #353535;
+  background-color: #ffffff;
+  border-radius: 50%;
+}
+
+.page-navigation .disabled{
+  opacity: 0.2;
+}
+
+.page-navigation a:hover,
+.page-navigation a:focus{
+  background-color: rgba(255, 255, 255, 0.2);
+  border-radius: 50%;
+}
+
+.page-navigation a:active{
+  color: #353535;
+  background-color: #ffffff;
+  border-radius: 50%;
 }
